# P1

./: .gitignore  Cargo.toml  manual.md  readme.md  rules.md  site dialog.md  todo.md
src/: boring.rs  generation.rs  main.rs  weighted_sampling.rs
